--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <title>Sebastian Developer</title>
     <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
   </head>
+  <!-- Estructura Web con Frameset -->
   <frameset rows="18%,*" frameborder="no" border="1">
+    <!-- Contenido del Navbar -->
     <frame name="navbar" src="components/navbar.html">
+    <!-- Contenido de la Página -->
     <frame name="contenido" src="components/inicio.html">
   </frameset>
 </html>
